--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>DCRR - Form</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -112,21 +112,21 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Fichier Annexe à upload</label>
         <div class="col-sm-10">
-          <input type="file" class="form-control-file" id="fileAnnexe">
+          <input type="file" class="form-control-file" id="fileAnnexe" accept="application/pdf">
         </div>
       </div>
 
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Fichier 1</label>
         <div class="col-sm-10">
-          <input type="file" class="form-control-file" id="file1">
+          <input type="file" class="form-control-file" id="file1" accept="application/pdf">
         </div>
       </div>
 
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Fichier 2</label>
         <div class="col-sm-10">
-          <input type="file" class="form-control-file" id="file2">
+          <input type="file" class="form-control-file" id="file2" accept="application/pdf">
         </div>
       </div>
 
@@ -1989,6 +1989,7 @@
             <i>(Pour ces deux points : méthodologie et points de mesure inscrites au PI)</i>
           </p>
         </div>
+        <div id="pdfContainer"></div>
   </form>
   <button type="button" id="printBtn" class="btn btn-primary mx-auto" onclick="generatePDF()">Print PDF</button>
   <script src="https://kit.fontawesome.com/17a6b59347.js"></script>
@@ -1997,6 +1998,9 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"
+    integrity="sha512-Z8CqofpIcnJN80feS2uccz+pXWgZzeKxDsDNMD/dJ6997/LSRY+W4NmEt9acwR+Gt9OHN0kkI1CTianCwoqcjQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     function setCurrentDate() {
       const currentDate = new Date().toISOString().split('T')[0];
@@ -2077,7 +2081,7 @@
       document.getElementById('Effets4').value = formData.section4.effects;
       document.getElementById('Localisationdeszonessensibles41').value = formData.section4.location[0];
       document.getElementById('Localisationdeszonessensibles42').value = formData.section4.location[1];
-      document.getElementById('Mesuresdesurveillance').value = formData.section4.measures;
+      document.getElementById('Mesuresdesurveillance4').value = formData.section4.measures;
       document.getElementById('Critèresdacceptation4').value = formData.section4.criteria;
       //sec 5
       document.getElementById('Conditionopératoirecritiquelimite5').value = formData.section5.criticalCondition;
@@ -2088,11 +2092,68 @@
       document.getElementById('Seuil5').value = formData.section5.threshold;
       document.getElementById('Actions5').value = formData.section5.actions;
 
+      displayPDFs(formData);
+      console.log("displayPDFs - Done")
     }
-    function generatePDF() {
+
+    function displayPDFs(formData) {
+      const files = formData.files;
+      for (const fileName in files) {
+        if (files.hasOwnProperty(fileName)) {
+          console.log("displayPDFs File URL genrate - Start")
+          const file = files[fileName];
+          if (file) {
+            console.log("displayPDFs File Found - Starte")
+            const fileReader = new FileReader();
+            fileReader.onload = function (event) {
+              const pdfData = new Uint8Array(event.target.result);
+              displayPDF(pdfData);
+            };
+            fileReader.readAsArrayBuffer(file);
+          }
+        }
+      }
+    }
+
+    function displayPDF(pdfData) {
+      console.log("displayPDF - started")
+      pdfjsLib.getDocument({ data: pdfData }).promise.then(pdf => {
+        const totalPages = pdf.numPages;
+
+        // Display each page individually
+        for (let pageNumber = 1; pageNumber <= totalPages; pageNumber++) {
+          pdf.getPage(pageNumber).then(page => {
+            const scale = 1.5;
+            const viewport = page.getViewport({ scale });
+
+            // Prepare canvas element
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
+            canvas.height = viewport.height;
+            canvas.width = viewport.width;
+
+            // Render the PDF page into the canvas
+            const renderContext = {
+              canvasContext: context,
+              viewport: viewport
+            };
+
+            page.render(renderContext).promise.then(() => {
+              // Append canvas to container
+              document.getElementById('pdfContainer').appendChild(canvas);
+            });
+          });
+        }
+      }).catch(error => {
+        console.error('Error loading PDF:', error);
+      });
+    }
+
+    async function generatePDF() {
       const element = document.getElementById('myForm');
       html2pdf(element, {
         margin: 1,
+        optimize_layout: true,
         filename: 'form.pdf',
         image: { type: 'jpeg', quality: 0.98 },
         html2canvas: { scale: 3 },
