Remove floatPrecision option from jsPDF configuration.

--- a/index.html
+++ b/index.html
@@ -2157,7 +2157,7 @@
         filename: 'form.pdf',
         image: { type: 'jpeg', quality: 0.98 },
         html2canvas: { scale: 3 },
-        jsPDF: { unit: 'in', format: 'a3', orientation: 'landscape',floatPrecision: 16 }
+        jsPDF: { unit: 'in', format: 'a3', orientation: 'landscape' }
       });
     }
   </script>
